--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotlabs Technology</title>
     <link rel="stylesheet" href="style.css">
+    <title>Hotlabs Technology</title>
 </head>
 <body>
-    <div class="logo-container">
-        <img src="logo.png" alt="Logo">
-    </div>
+    <img src="logo.png" alt="Logo">
 </body>
 </html>
