central image, no scroll

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Hotlabs Technology</title>
 </head>
 <body>
-    <img src="logo.png" alt="Logo">
+    <div class="logo-container">
+        <img src="logo.png" alt="Logo">
+    </div>
 </body>
 </html>
