--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Hotlabs Technology</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="logo-container">
-        <img src="logo.png" alt="Logo">
+    <div class="content">
+        <img src="logo.png" alt="Hotlabs Technology Logo">
+        <div class="links">
+            <a href="mailto:hello@hotlabs.tech">Contact</a> | 
+            <a href="#">Privacy Policy</a>
+        </div>
     </div>
 </body>
 </html>
