--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="content">
         <img src="logo.png" alt="Hotlabs Technology Logo">
         <div class="links">
-            <a href="mailto:hello@hotlabs.tech">Contact</a> | 
-            <a href="#">Privacy Policy</a>
+            <a href="mailto:hello@hotlabs.tech">Contact</a> <span>|</span> <a href="#">Privacy Policy</a>
         </div>
     </div>
 </body>
