--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div class="content">
         <img src="logo.png" alt="Hotlabs Technology Logo">
         <div class="links">
-            <a href="mailto:hello@hotlabs.tech">Contact</a>
-            <span class="divider">|</span>
-            <a href="privacy_policy.html">Privacy Policy</a>
+            <a href="mailto:hello@hotlabs.tech">Contact</a> | <a href="privacy_policy.html">Privacy Policy</a>
         </div>
     </div>
 </body>
