bugfix: logo is not centered

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="content">
-        <img src="logo.png" alt="Hotlabs Technology Logo">
+        <img class="logo" src="logo.png" alt="Hotlabs Technology Logo">
         <div class="links">
             <a href="mailto:hello@hotlabs.tech">Contact</a> | <a href="privacy_policy.html">Privacy Policy</a>
         </div>
