--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -7,7 +7,7 @@
     <title>Privacy Policy | Hotlabs Technology</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="pp-container">
     <div class="privacy-content">
         <div data-custom-class="body">
             <div><strong><span style="font-size: 26px;"><span data-custom-class="title">PRIVACY
