privacy policy was cropped again 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hotlabs Technology</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home-page">
     <div class="content">
         <img class="logo" src="logo.png" alt="Hotlabs Technology Logo">
         <div class="links">
