removed unused color

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -127,8 +127,7 @@
       1.5;"><span style="font-size: 15px;"><a data-custom-class="link" href="#caresidents"><span style="color: white;">9. DO
       CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</span></a></span></div><div style="line-height: 1.5;"><span style="font-size:
       15px;"><a data-custom-class="link" href="#policyupdates"><span style="color: white;">10. DO WE MAKE UPDATES TO THIS
-      NOTICE?</span></a></span></div><div style="line-height: 1.5;"><a data-custom-class="link" href="#contact"><span style="color: rgb(89,
-      89, 89); font-size: 15px;">11. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</span></a></div><div style="line-height: 1.5;"><a
+      NOTICE?</span></a></span></div><div style="line-height: 1.5;"><a data-custom-class="link" href="#contact"><span style="color:white" font-size: 15px;">11. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</span></a></div><div style="line-height: 1.5;"><a
       data-custom-class="link" href="#request"><span style="color: white;">12. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE
       COLLECT FROM YOU?</span></a></div><div style="line-height: 1.5;"><br></div><div id="infocollect" style="line-height: 1.5;"><span
       style="color: rgb(127, 127, 127);"><span style="color: white; font-size: 15px;"><span style="font-size: 15px; color: rgb(89,
